Fixed some alignment issues in the component

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -3,8 +3,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 76px;
-  padding-bottom: 198px;
+  padding-top: 56px;
+  padding-bottom: 130px;
   padding-left: 162px;
   padding-right: 112px;
   z-index: 2;
