--- a/src/pages/SendINRLandingPage/index.module.scss
+++ b/src/pages/SendINRLandingPage/index.module.scss
@@ -460,14 +460,16 @@ input:focus {
   }
 }
 .sendINRLandingPageContainer {
+  margin-left: 162px;
   display: flex;
   padding-right: 112px;
   justify-content: space-between;
 
   @media screen and (max-width: 992px) {
     flex-direction: column;
-    margin-top: 120px;
+    margin-top: 90px;
     padding-right: 0px;
+    margin-left: 0;
   }
 }
 .routesContainer {
@@ -505,7 +507,7 @@ input:focus {
   position: absolute;
   margin-left: -516px;
   margin-top: -200px;
-  animation: mymove 50s infinite;
+  animation: mymove 102s infinite;
 }
 .backgroundLeftImageSimpleStyleSectionInMobile {
   display: none;
